--- a/angular.json
+++ b/angular.json
@@ -92,10 +92,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           }
         },
         "lint": {
@@ -124,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Cinema-Front-Web"
+    }
+  },
+  "defaultProject": "Cinema-Front-Web",
+  "cli": {
+    "analytics": false
+  }
 }
